# lmao

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: lgx.yml
basecamp/: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  project.json
basecamp/agent-module/: CMakeLists.txt  flake.nix  metadata.json
basecamp/agent-module/src/: agent_impl.cpp  agent_impl.h
basecamp/agent-module/tests/: CMakeLists.txt  main.cpp  test_agent.cpp
basecamp/agent-ui/: .gitignore  Main.qml  flake.nix  metadata.json
crates/lmao-ffi/src/: lib.rs
crates/logos-core-bindings/: Cargo.toml  README.md  build.rs
crates/logos-core-bindings/shim/: CMakeLists.txt  logos_types_shim.cpp  shim.cpp  shim.h
crates/logos-core-bindings/src/: lib.rs
crates/logos-messaging-a2a-cli/: Cargo.toml
crates/logos-messaging-a2a-cli/src/: agent.rs  cli.rs  common.rs  daemon_cmd.rs  info.rs  main.rs  metrics.rs  presence.rs  session.rs  shim.rs  storage.rs  task.rs  trust.rs
crates/logos-messaging-a2a-cli/src/daemon/: client.rs  frame.rs  mod.rs  protocol.rs  server.rs
crates/logos-messaging-a2a-core/: Cargo.toml
crates/logos-messaging-a2a-core/src/: delegation.rs  envelope.rs  lib.rs  presence.rs  task.rs  topics.rs  trust.rs
crates/logos-messaging-a2a-crypto/benches/: crypto.rs
crates/logos-messaging-a2a-crypto/src/: lib.rs
crates/logos-messaging-a2a-crypto/tests/: proptest_crypto.rs
crates/logos-messaging-a2a-ffi/src/: lib.rs
crates/logos-messaging-a2a-mcp/src/: main.rs  server.rs
crates/logos-messaging-a2a-node/src/: delegation.rs  discovery.rs  history.rs  lib.rs  metrics.rs  presence.rs  session.rs  streaming.rs
crates/logos-messaging-a2a-node/src/tasks/: helpers.rs  mod.rs  payment.rs  poll.rs  respond.rs  send.rs
crates/logos-messaging-a2a-node/tests/: delegation.rs  encrypted_sessions.rs  full_lifecycle.rs  integration.rs  ping_pong.rs  presence.rs  retry.rs  sealed_presence.rs  trust_filter.rs
crates/logos-messaging-a2a-storage/: Cargo.toml
crates/logos-messaging-a2a-storage/src/: lib.rs  libstorage_backend.rs  storage_module_backend.rs
crates/logos-messaging-a2a-storage/tests/: storage_module_integration.rs
crates/logos-messaging-a2a-transport/: Cargo.toml  build.rs
crates/logos-messaging-a2a-transport/examples/: logos_delivery_roundtrip.rs
crates/logos-messaging-a2a-transport/src/: delivery_module_transport.rs  lib.rs  logos_delivery.rs  logos_delivery_sys.rs
crates/logos-messaging-a2a-transport/src/sds/: channel.rs
crates/logos-messaging-a2a-transport/tests/: shim_integration.rs
demo-config/pi/agent/: settings.json
demo-config/pi/agent/extensions/: max-turns.ts
docs/: DEMO.md  MODULE_API.md  RUNNING_REMOTE.md  TRUST.md  architecture.md  issues.md
examples/: echo_agent.rs  logos_delivery_delegation.rs  logos_delivery_encrypted.rs  logos_delivery_streaming.rs  logos_delivery_two_agents.rs  ping_pong.rs  presence_discovery.rs  task_delegation.rs  two_agents.rs
experiments/rust-logos-api/: README.md
experiments/rust-logos-api/probe-cpp/: CMakeLists.txt  flake.nix  main.cpp  result
experiments/rust-logos-api/rust-shim/: Cargo.toml  build.rs  flake.nix  wrapper.h
experiments/rust-logos-api/rust-shim/shim/: shim.cpp
experiments/rust-logos-api/rust-shim/src/: lib.rs  main.rs
scripts/: build-fat-lgx.sh  demo-containerized.sh  demo-logos-core-shim.sh  demo.sh  goose-with-audit.sh  lemonade-summarizer.sh  pi-exec.sh
src/: lib.rs
