[package]
name = "logos-messaging-a2a-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logos-messaging-a2a"
path = "src/main.rs"

[features]
default = ["rest"]
rest = ["logos-messaging-a2a-transport/rest"]
logos-delivery = ["logos-messaging-a2a-transport/logos-delivery"]
libstorage = ["logos-messaging-a2a-storage/libstorage"]
# Pulls in the LogosAPI shim backends: the CLI builds one shared
# `Arc<Shim>` and hands it to both the storage and transport builders.
# Picks up `LOGOS_INSTANCE_ID` from the env, so launching the CLI as a
# child of `logoscore` / Basecamp Just Works.
shim = [
    "dep:logos-core-bindings",
    "logos-messaging-a2a-transport/delivery-module",
    "logos-messaging-a2a-storage/storage-module",
]

[dependencies]
logos-messaging-a2a-crypto = { path = "../logos-messaging-a2a-crypto" }
logos-messaging-a2a-core = { path = "../logos-messaging-a2a-core" }
logos-messaging-a2a-transport = { path = "../logos-messaging-a2a-transport", default-features = false }
logos-messaging-a2a-storage = { path = "../logos-messaging-a2a-storage", default-features = false }
logos-messaging-a2a-node = { path = "../logos-messaging-a2a-node" }
logos-core-bindings = { path = "../logos-core-bindings", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
k256 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
