[package]
name = "logos-messaging-a2a-storage"
version = "0.1.0"
edition = "2021"
description = "Storage backend trait and Logos Storage (Codex) REST implementation"

[features]
default = ["rest"]
rest = ["reqwest"]
libstorage = ["dep:storage-bindings", "dep:tempfile"]
# Storage backend that calls Basecamp's `storage_module` via the Logos
# C++ SDK (through `logos-core-bindings`). Mutually compatible with the
# other backends — separate trait impls. Whether the shim has real or
# stub FFI is decided at logos-core-bindings build time.
storage-module = ["dep:logos-core-bindings", "dep:base64", "dep:serde_json", "dep:tempfile"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }

# REST backend
reqwest = { workspace = true, optional = true }

# Logos Core native backend
base64 = { version = "0.22", optional = true }
serde_json = { version = "1", optional = true }

# Libstorage native backend
storage-bindings = { version = "0.2", optional = true }
tempfile = { version = "3", optional = true }

# storage_module backend (via the Logos C++ SDK shim)
logos-core-bindings = { path = "../logos-core-bindings", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
tempfile = "3"
serde_json = { version = "1" }

[[test]]
name = "storage_module_integration"
path = "tests/storage_module_integration.rs"
required-features = ["storage-module"]
