[package]
name = "logos-messaging-a2a-transport"
version = "0.1.0"
edition = "2021"

[features]
default = ["rest"]
rest = ["reqwest"]
logos-delivery = ["dep:base64"]
# Transport that drives Basecamp's `delivery_module` via the LogosAPI
# shim (`logos-core-bindings`). Same trade-offs as the storage-module
# backend: one node shared across modules, every call is ~ms IPC.
delivery-module = ["dep:logos-core-bindings", "dep:base64"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
bloomfilter = { workspace = true }
base64 = { version = "0.22", optional = true }
tracing = { workspace = true }
logos-core-bindings = { path = "../logos-core-bindings", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = { workspace = true }

[[example]]
name = "logos_delivery_roundtrip"
path = "examples/logos_delivery_roundtrip.rs"
required-features = ["logos-delivery"]
