# Stand-alone crate, NOT in the lmao workspace.
[workspace]

[package]
name = "logos-shim-probe"
version = "0.0.1"
edition = "2021"
publish = false

# NOTE: not in the workspace (../../Cargo.toml). Experimental crate;
# joins the workspace once Phase B graduates into the actual
# `refactor/cli-as-remote-consumer` work tracked in #19.

[lib]
name = "logos_shim"
path = "src/lib.rs"

[[bin]]
name = "agent_info_probe_rs"
path = "src/main.rs"

[dependencies]
serde_json = "1"

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"
